# datalake

./: .dockerignore  .gitignore  DASHBOARD_REQUIREMENTS.md  Dockerfile  README.md  docker-compose.yml  docker-ingest.sh  docker-init.sh  docker-query.sh  docker-test.sh  main.py  progress_actual.md  pyproject.toml  schema.sql  schema_v2.sql  status_datalake.md
api/: __init__.py  database.py  main.py
parsers/: __init__.py  chatgpt_parser.py  claude_parser.py  memory_parser.py  voice_parser.py
scripts/: datalake-web.service  ingest-audio.sh  ingest-memory.sh  init-v2.sh  init.sh  migrate-add-chatgpt.sql  migrate-add-memory.sql  migrate-v1-to-v2.sh  query.sh  refresh-claude.sh  sync-to-primary.sh
tests/: conftest.py  test_database.py  test_ingestion.py  test_init_script.py  test_queries.py
web/: __init__.py  app.py
web/templates/: base.html  chatgpt_detail.html  chatgpt_list.html  control_dashboard.html  index.html  memory.html  memory_events.html  search.html  session_detail.html  sessions.html  voice.html
